Updated how tests are run and fixed a bug.
